# boilerplate_cxx

./: CMakeLists.txt  configure.sh  readme.org
gui/: CMakeLists.txt  main.cpp
include/: fib.hpp
test/: CMakeLists.txt
test/src/: main.cpp
